--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ pluggy==0.6.0
 py==1.5.3
 pyparsing==2.2.0
 pytest==3.6.0
-PyYAML==3.12
 rdflib==4.2.2
 six==1.11.0
 stfile==0.1
 fleep
+pyyaml>=4.2b1
